--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
 <div class="hero-sektion position-relative">
     <img src="https://placehold.co/1240x400" alt="">
+    <img  src="https://placehold.co/600x400" alt="">
 
         <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
         <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
