--- a/skabelon.html
+++ b/skabelon.html
@@ -53,7 +53,12 @@
 <!--BAGGRUNDSBILLEDE-->
 <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
 <div class="hero-sektion position-relative">
-    <img src="https://placehold.co/1240x400" alt="">
+    <picture>
+      <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
+      <img src="https://placehold.co/100x100" alt="">
+    </picture>
+
+
 
         <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
         <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
