--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
 <!--BAGGRUNDSBILLEDE-->
 <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
 <div class="hero-sektion position-relative">
-    <img src="https://placehold.co/1240x400" alt="">
-    <img  src="https://placehold.co/600x400" alt="">
+    <picture>
+      <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
+      <img src="https://placehold.co/100x100" alt="">
+    </picture>
+
+
 
         <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
         <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
@@ -67,16 +71,16 @@
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container text-center">
+<div class="container">
   <div class="row align-items-start">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-8">
-      <p>Tekst</p>
+    <div class="col-12 col-sm-6">
+      <p>LILLE SKÅL ønsker at skabe et fællesskab omkring budgetvenlig hverdagsmad lavet med omtanke – med sæsonens råvarer og simple opskrifter til dig med et lille køkken og stor appetit på smag.</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-2">
+    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
       <img src="#" alt="illustration">
     </div>
   </div>
