--- a/skabelon.html
+++ b/skabelon.html
@@ -71,16 +71,16 @@
 </div>
 
 <!--INTRODUKTIONS-AFSNIT-->
-<div class="container text-center">
+<div class="container">
   <div class="row align-items-start">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-    <div class="col-12 col-sm-8">
+    <div class="col-12 col-sm-6">
       <p>Tekst</p>
     </div>
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-    <div class="d-none d-sm-block col-sm-2 offset-sm-2">
+    <div class="d-none d-sm-block col-sm-2 offset-sm-4">
       <img src="#" alt="illustration">
     </div>
   </div>
