--- a/skabelon.html
+++ b/skabelon.html
@@ -24,7 +24,7 @@
       <ul class="navbar-nav">
         <!--DROPDOWN M. SÆSONER-->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="opskrifter.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Opskrifter
           </a>
           <ul class="dropdown-menu">
