--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="container">
-  <div class="row align-items-start">
+  <div class="row align-items-start my-5 mx-2">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -81,10 +81,51 @@
     <!--Illustration til højre-->
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
-      <img src="#" alt="illustration">
+      <img src="https://placehold.co/50x50" alt="illustration">
     </div>
   </div>
 </div>
+
+<!--ÅRSTIDENS OPSKRIFTER-AFSNIT-->
+<div class="container">
+    <div class="my-5 mx-2">
+        <h2>Årstidens Opskrifter</h2>
+
+        <!--Aktuel årstid-->
+        <div id="current-season" class="season-banner">
+        <!--JS tilføjer billede og tekst-->
+        </div>
+
+        <!--Andre årstider-->
+        <h3>Udforsk andre årstider</h3>
+        <div class="row">
+            <div class="col-3">
+                <div class="season-card" style="background-image: url(eksempel.jpg);">
+                    Sommer
+                </div>
+            </div>
+             <div class="col-3">
+                <div class="season-card" style="background-image: url(eksempel.jpg);">
+                    Efterår
+                </div>
+            </div>
+             <div class="col-3">
+                <div class="season-card" style="background-image: url(eksempel.jpg);">
+                    Vinter
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="season-card" style="background-image: url(eksempel.jpg);">
+                    Forår
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--E-MAGASIN-AFSNIT-->
+
+<!--FÆLLESSKAB-AFSNIT-->
 
 
 
@@ -93,6 +134,9 @@
 
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+    </script>
+
+    <script src="script.js"></script>
   </body>
 </html>
