--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <!--Andre årstider-->
         <h3>Udforsk andre årstider</h3>
-        <div id="other-seasons"  class="row">
+        <!--        <div id="other-seasons"  class="row">
             <div class="col-3">
                 <div class="season-card" style="background-image: url(eksempel.jpg);">
                     Sommer
@@ -119,7 +119,12 @@
                     Forår
                 </div>
             </div>
-        </div>
+        </div>-->
+
+        <div id="other-seasons" class="season-row" ></div>
+
+
+
     </div>
 </div>
 
