--- a/skabelon.html
+++ b/skabelon.html
@@ -1,58 +1,23 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Skabelon</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  
+  <body>
+    <!--NAVIGATIONSBAR-->
+    <!--LOGO TIL VENSTRE-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">LOGO</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-<<<<<<< HEAD
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Skabelon</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link rel="stylesheet" href="stylesheet.css">
-  <!-- link til ikoner -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-</head>
-
-<body>
-  <!--NAVIGATIONSBAR-->
-  <!--LOGO TIL VENSTRE-->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">LOGO</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!--MENU-LINJE TIL HØJRE-->
-      <!--justify-content-end for at sætte elemterne ud til højre-->
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <!--DROPDOWN M. SÆSONER-->
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Opskrifter
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#foraar.html">Forår</a></li>
-              <li><a class="dropdown-item" href="#sommer.html">Sommer</a></li>
-              <li><a class="dropdown-item" href="#efteraar.html">Efterår</a></li>
-              <li><a class="dropdown-item" href="#vinter.html">Vinter</a></li>
-            </ul>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="#faellesskaal.html">Fælles-skål</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#omos.html">Om Os</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#kontakt.html">Kontakt</a>
-          </li>
-        </ul>
-      </div>
-=======
     <!--MENU-LINJE TIL HØJRE-->
     <!--justify-content-end for at sætte elemterne ud til højre-->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -80,42 +45,10 @@
           <a class="nav-link" href="kontakt.html">Kontakt</a>
         </li>
       </ul>
->>>>>>> f99848eba00d0cda741f00965490316090465b3b
-    </div>
-  </nav>
-
-<<<<<<< HEAD
-  <!--HERO-SEKTION-->
-  <!--BAGGRUNDSBILLEDE-->
-  <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
-  <div class="hero-sektion position-relative">
-    <img src="https://placehold.co/1240x400" alt="">
-
-    <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
-    <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
-    <!--w-100 h-100: gør overlay lige så stort som billedet-->
-    <!--d-flex ....: centrerer tekst midt i billedet-->
-    <div
-      class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
-      <h1>Lille Skål</h1>
-      <a href="">Opskrifter til små køkkener og store smage ></a>
     </div>
   </div>
+</nav>
 
-  <!--INTRODUKTIONS-AFSNIT-->
-  <div class="container text-center">
-    <div class="row align-items-start">
-      <!--Tekstfelt m. introduktion til side-->
-      <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
-      <div class="col-12 col-sm-8">
-        <p>Tekst</p>
-      </div>
-      <!--Illustration til højre-->
-      <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-      <div class="d-none d-sm-block col-sm-2 offset-sm-2">
-        <img src="#" alt="illustration">
-      </div>
-=======
 <!--HERO-SEKTION-->
 <!--BAGGRUNDSBILLEDE-->
 <!--position-relative: gør container til ref. for det, som skal placeres ovenpå-->
@@ -124,7 +57,6 @@
       <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
       <img src="https://placehold.co/100x100" alt="">
     </picture>
-
 
 
         <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
@@ -149,14 +81,12 @@
     <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
     <div class="d-none d-sm-block col-sm-2 offset-sm-4">
       <img src="#" alt="illustration">
->>>>>>> f99848eba00d0cda741f00965490316090465b3b
     </div>
   </div>
+</div>
 
 
-
-
-  <!--Footer-->
+<!--Footer-->
   <!-- Footer sektion med relativ positionering, så alt indeni kan placeres absolut -->
 <footer class="position-relative">
 
@@ -214,9 +144,7 @@
   </div>
 </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
-</body>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  </body>
 </html>
