--- a/skabelon.html
+++ b/skabelon.html
@@ -72,7 +72,7 @@
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="container">
-  <div class="row align-items-start">
+  <div class="row align-items-start my-5 mx-2">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
