--- a/foraar.html
+++ b/foraar.html
@@ -76,7 +76,7 @@
 
     <!--INTRODUKTIONS-AFSNIT-->
     <div class="container">
-        <div class="row align-items-start my-5 mx-2">
+        <div class="row align-items-start my-5">
             <!--Tekstfelt m. introduktion til side-->
             <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
             <div class="col-12 col-sm-6">
@@ -95,7 +95,7 @@
 
     <!-- Smagen af forår - organge container -->
     <div class="container orange">
-        <div class="col-6">
+        <div class="col-12 col-sm-6">
             <h2>Smagen af forår</h2>
             <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
                 Retter, der smager af solskin, spirende altaner og middage med åbne vinduer.</p>
