--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Skabelon</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
+
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init({
+              publicKey: "3LdleP9UAzHffR-I7",
+            });
+        })();
+    </script>
   </head>
   
   <body>
@@ -103,6 +113,31 @@
 </div>
 
 <!--E-MAGASIN-AFSNIT-->
+<section class="collage">
+    <div class="galleri">
+        <img src="https://placehold.co/100x100" class="billede1" alt="">
+        <img src="https://placehold.co/100x100" class="billede2" alt="">
+        <img src="https://placehold.co/100x100" class="billede3" alt="">
+        <img src="https://placehold.co/100x100" class="billede4" alt="">
+        <img src="https://placehold.co/100x100" class="billede5" alt="">
+        <img src="https://placehold.co/100x100" class="billede6" alt="">
+        <img src="https://placehold.co/100x100" class="billede7" alt="">
+    </div>
+
+    <div class="tilmelding-boks">
+        <h2>Bliv inspireret i din indbakke</h2>
+        <p>Et par gange om måneden sender vi inspiration direkte til din indbakke. Her deler vi opskrifter, der følger sæsonen, tips til mad på budget og små historier fra vores madunivers, hvor det hjemmelavede måltid og den gode stemning er i centrum.
+        Du får også første besked, når vi inviterer til events og fællesspisning. Tilmeld dig vores e-magasin</p>
+        
+        <form id="contact-form">
+        <!-- To simplify the tutorial, the value is static. -->
+        <label>Email</label>
+        <input type="email" name="email" required>
+        <input type="submit" value="Send">
+</form>
+    </div>
+</section>
+
 
 <!--FÆLLESSKAB-AFSNIT-->
 
