--- a/index.html
+++ b/index.html
@@ -113,16 +113,14 @@
 </div>
 
 <!--E-MAGASIN-AFSNIT-->
-<section class="collage">
-    <div class="galleri">
-        <img src="https://placehold.co/100x100" class="billede1" alt="">
-        <img src="https://placehold.co/100x100" class="billede2" alt="">
-        <img src="https://placehold.co/100x100" class="billede3" alt="">
-        <img src="https://placehold.co/100x100" class="billede4" alt="">
-        <img src="https://placehold.co/100x100" class="billede5" alt="">
-        <img src="https://placehold.co/100x100" class="billede6" alt="">
-        <img src="https://placehold.co/100x100" class="billede7" alt="">
-    </div>
+<section class="collage-container">
+        <img src="img/Frame 5.png" class="billede billede1" alt="">
+        <img src="img/Frame 6.png" class="billede billede2" alt="">
+        <img src="img/Frame 7.png" class="billede billede3" alt="">
+        <img src="img/Frame 8.png" class="billede billede4" alt="">
+        <img src="img/Frame 9.png" class="billede billede5" alt="">
+        <img src="img/Frame 10.png" class="billede billede6" alt="">
+        <img src="img/Frame 11.png" class="billede billede7" alt="">
 
     <div class="tilmelding-boks">
         <h2>Bliv inspireret i din indbakke</h2>
@@ -134,12 +132,16 @@
         <label>Email</label>
         <input type="email" name="email" required>
         <input type="submit" value="Send">
-</form>
+        </form>
     </div>
 </section>
 
 
 <!--FÆLLESSKAB-AFSNIT-->
+<section class="bord-container d-flex position-relative align-items-center justify-content-center">
+    <a href="faellesskaal.html"><img src="https://placehold.co/500x200" alt=""></a>
+    <a class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center" href="faellesskaal.html">Bliv en del af fælles-skålen</a>
+</section>
 
 
 
