--- a/kontakt.html
+++ b/kontakt.html
@@ -98,8 +98,8 @@
         </div>
         <div class="col">
             <div class="polaroid">
-                <img src="#" alt="billede">
-                <div class="caption">en beskrives</div>
+                <img src="img/vin.JPG" alt="Et billede">
+                <div class="caption">En fælles-skåle fra lille skål</div>
               </div>
         </div>
     </div>
