--- a/kontakt.html
+++ b/kontakt.html
@@ -50,6 +50,8 @@
   </div>
 </nav>
 
+<!----------------------------------serviet ---------------------------------> 
+
 <footer class="position-relative">
     <div class="row align-items-start">
         <div class="col">
@@ -96,6 +98,7 @@
                 </div>
               </div>
         </div>
+
         <div class="col">
             <div class="polaroid">
                 <img src="img/vin.JPG" alt="Et billede">
