--- a/omos.html
+++ b/omos.html
@@ -50,7 +50,31 @@
   </div>
 </nav>
 
-<!--INTRODUKTIONS-AFSNIT-->
+<section class="om-os">
+  <h1>Om Os</h1>
+
+  <div class="om-os-grid">
+    <div class="om-os-image-left">
+      <img src="https://placehold.co/200x250" alt="To kokke">
+    </div>
+
+    <div class="om-os-text">
+      <p>
+        I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.
+      </p>
+    </div>
+
+    <div class="om-os-image-right">
+      <img src="https://placehold.co/120x160" class="billede10" alt="Collage billede 10">
+      <img src="https://placehold.co/80x100" class="billede11" alt="Collage billede 11">
+    </div>
+  </div>
+</section>
+
+
+
+
+<!--INTRODUKTIONS-AFSNIT
 <h1>Om Os</h1>
 
 <div class="container my-5">
@@ -85,7 +109,7 @@
     <img src="" alt="">
     <img src="" alt="">
 </div>
-
+-->
 
 <!--Footer-->
   <!-- Footer sektion med relativ positionering, så alt indeni kan placeres absolut -->
