--- a/omos.html
+++ b/omos.html
@@ -71,6 +71,19 @@
   </div>
 </section>
 
+<section class="om-os">
+    <div class="om-os-grid">
+        <div class="om-os-text">
+        <p>
+            Bag skærmen sidder vores tekniske tryllekunstner og vores kreative stemme udadtil. Den ene får platformen til at køre som smurt, og den anden sørger for, at du føler dig hjemme, uanset om du læser en opskrift eller tilmelder dig e-magasinet. Vi er fire vidt forskellige mennesker, men vi deler drømmen om at skabe et madunivers med plads til både fællesskab, nærvær og rester på rugbrød.
+        </p>
+        </div>
+    <div class="om-os-tekniker">
+        <img src="https://placehold.co/200x250" alt="">
+    </div>
+    </div>
+</section>
+
 
 
 
