--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
 
 <!--E-MAGASIN-AFSNIT-->
 <section class="collage-container">
-        <img src="img/Frame 5.png" class="billede billede1" alt="">
-        <img src="img/Frame 6.png" class="billede billede2" alt="">
-        <img src="img/Frame 7.png" class="billede billede3" alt="">
-        <img src="img/Frame 8.png" class="billede billede4" alt="">
-        <img src="img/Frame 9.png" class="billede billede5" alt="">
-        <img src="img/Frame 10.png" class="billede billede6" alt="">
-        <img src="img/Frame 11.png" class="billede billede7" alt="">
+        <img src="img/kurv.png" class="billede billede1" alt="">
+        <img src="img/foraarsbord.png" class="billede billede2" alt="">
+        <img src="img/asparges.png" class="billede billede3" alt="">
+        <img src="img/tomat.png" class="billede billede4" alt="">
+        <img src="img/foraarsmad.png" class="billede billede5" alt="">
+        <img src="img/driver.png" class="billede billede6" alt="">
+        <img src="img/vin.png" class="billede billede7" alt="">
 
     <div class="tilmelding-boks">
         <h2>Bliv inspireret i din indbakke</h2>
