--- a/foraar.html
+++ b/foraar.html
@@ -150,7 +150,8 @@
 
                     <div class="row justify-content-center">
                         <div class="telefon col-12 col-md-6">
-                            <p><strong>Telefon.nr.:</strong><br>+45 27 14 78 **</p>
+                            <p>Telefon.nr.:</p>
+                            <p>+45 27 14 78 **</p>
                         </div>
 
                         <div class="mail col-12 col-md-6">
