--- a/index.html
+++ b/index.html
@@ -114,26 +114,33 @@
 
 <!--E-MAGASIN-AFSNIT-->
 <section class="collage-container">
-        <img src="img/kurv.png" class="billede billede1" alt="">
-        <img src="img/foraarsbord.png" class="billede billede2" alt="">
-        <img src="img/asparges.png" class="billede billede3" alt="">
-        <img src="img/tomat.png" class="billede billede4" alt="">
-        <img src="img/foraarsmad.png" class="billede billede5" alt="">
-        <img src="img/driver.png" class="billede billede6" alt="">
-        <img src="img/vin.png" class="billede billede7" alt="">
+        <img src="img/kurv.png" class="billede kurv" alt="">
+        <img src="img/foraarsbord.png" class="billede foraarsbord" alt="">
+        <img src="img/asparges.png" class="billede asparges" alt="">
+        <img src="img/tomat.png" class="billede tomat" alt="">
+        <img src="img/foraarsmad.png" class="billede foraarsmad" alt="">
+        <img src="img/driver.png" class="billede driver" alt="">
+        <img src="img/vin.png" class="billede vin" alt="">
 
-    <div class="tilmelding-boks">
-        <h2>Bliv inspireret i din indbakke</h2>
-        <p>Et par gange om måneden sender vi inspiration direkte til din indbakke. Her deler vi opskrifter, der følger sæsonen, tips til mad på budget og små historier fra vores madunivers, hvor det hjemmelavede måltid og den gode stemning er i centrum.
-        Du får også første besked, når vi inviterer til events og fællesspisning. Tilmeld dig vores e-magasin</p>
-        
-        <form id="contact-form">
-        <!-- To simplify the tutorial, the value is static. -->
-        <label>Email</label>
-        <input type="email" name="email" required>
-        <input type="submit" value="Send">
-        </form>
-    </div>
+<div class="container d-flex justify-content-center align-items-center">
+
+  <div class="tilmelding-boks">
+    <h2>Bliv inspireret i din indbakke</h2>
+    <p>Et par gange om måneden sender vi inspiration direkte til din indbakke. Her deler vi opskrifter, der følger sæsonen, tips til mad på budget og små historier fra vores madunivers, hvor det hjemmelavede måltid og den gode stemning er i centrum.
+    Du får også første besked, når vi inviterer til events og fællesspisning. 
+    <br> <br>
+    Tilmeld dig vores e-magasin</p>
+    
+    <form id="contact-form">
+    <!-- To simplify the tutorial, the value is static. -->
+    <label>Email</label>
+    <input type="email" name="email" required>
+    <input type="submit" value="Send">
+    </form>
+  </div>
+
+</div>
+   
 </section>
 
 
