--- a/omos.html
+++ b/omos.html
@@ -50,79 +50,37 @@
   </div>
 </nav>
 
-<section class="om-os">
-  <h1>Om Os</h1>
-
-  <div class="om-os-grid">
-    <div class="om-os-image-left">
-      <img src="https://placehold.co/200x250" alt="To kokke">
-    </div>
-
-    <div class="om-os-text">
-      <p>
-        I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.
-      </p>
-    </div>
-
-    <div class="om-os-image-right">
-      <img src="https://placehold.co/120x160" class="billede10" alt="Collage billede 10">
-      <img src="https://placehold.co/80x100" class="billede11" alt="Collage billede 11">
-    </div>
-  </div>
-</section>
-
-<section class="om-os">
-    <div class="om-os-grid">
-        <div class="om-os-text">
-        <p>
-            Bag skærmen sidder vores tekniske tryllekunstner og vores kreative stemme udadtil. Den ene får platformen til at køre som smurt, og den anden sørger for, at du føler dig hjemme, uanset om du læser en opskrift eller tilmelder dig e-magasinet. Vi er fire vidt forskellige mennesker, men vi deler drømmen om at skabe et madunivers med plads til både fællesskab, nærvær og rester på rugbrød.
-        </p>
-        </div>
-    <div class="om-os-tekniker">
-        <img src="https://placehold.co/200x250" alt="">
-    </div>
-    </div>
-</section>
-
-
-
-
-<!--INTRODUKTIONS-AFSNIT
 <h1>Om Os</h1>
 
-<div class="container my-5">
-  <div class="row align-items-start">
+<div class="container">
+  <div class="row align-items-start my-5">
     <div class="col-12 col-sm-4">
-      <img src="https://placehold.co/50x60" alt="">
+      <img class="kokke" src="https://placehold.co/200x250" alt="">
     </div>
     <div class="col-12 col-sm-4">
-      <p>I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.</p>
+              I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.
+      </p>
     </div>
-    <div class="col">
-      <img src="https://placehold.co/30x40" alt="">
-      <img src="https://placehold.co/10x10" alt="">
+    <div class="col-sm-2 offset-sm-1">
+      <img class="madlavning" src="https://placehold.co/120x160" class="" alt="">
     </div>
   </div>
 </div>
 
-<div class="container my-5">
-  <div class="row align-items-start">
-    <div class="col-12 col-sm-4">
+
+<div class="container">
+  <div class="row align-items-start my-5">
+    <div class="col-12 col-sm-5">
       <p>Bag skærmen sidder vores tekniske tryllekunstner og vores kreative stemme udadtil. Den ene får platformen til at køre som smurt, og den anden sørger for, at du føler dig hjemme, uanset om du læser en opskrift eller tilmelder dig e-magasinet. Vi er fire vidt forskellige mennesker, men vi deler drømmen om at skabe et madunivers med plads til både fællesskab, nærvær og rester på rugbrød.</p>
     </div>
-    <div class="col-12 col-sm-5">
-      <img src="https://placehold.co/30x40" alt="">
-      <img src="https://placehold.co/10x10" alt="">
+    <div class="col-12 col-sm-4 ">
+      <img class="teknik" src="https://placehold.co/120x160" alt="">
     </div>
   </div>
 </div>
 
-<div>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-</div>
--->
+
+
 
 <!--Footer-->
   <!-- Footer sektion med relativ positionering, så alt indeni kan placeres absolut -->
