--- a/omos.html
+++ b/omos.html
@@ -54,14 +54,14 @@
 
 <div class="container">
   <div class="row align-items-start my-5">
-    <div class="col-12 col-sm-4">
+    <div class="col-12 col-sm-6 col-md-4 ">
       <img class="kokke" src="https://placehold.co/200x250" alt="">
     </div>
-    <div class="col-12 col-sm-4">
+    <div class="col-12 col-sm-6 col-md-4">
               I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.
       </p>
     </div>
-    <div class="col-sm-2 offset-sm-1">
+    <div class="col-sm-2 offset-sm-1 d-none d-md-block">
       <img class="madlavning" src="https://placehold.co/120x160" class="" alt="">
     </div>
   </div>
