--- a/omos.html
+++ b/omos.html
@@ -52,15 +52,19 @@
 
 <h1>Om Os</h1>
 
+<!--Første del m. 2 fra holdet-->
 <div class="container">
   <div class="row align-items-start my-5">
     <div class="col-12 col-sm-6 col-md-4 ">
+      <!--Billede af Amalie og Lærke-->
       <img class="kokke" src="https://placehold.co/200x250" alt="">
     </div>
     <div class="col-12 col-sm-6 col-md-4">
+      <!--Tekst om kokke-->
               I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.
       </p>
     </div>
+    <!--Billede, som kun vises fra tablet og op-->
     <div class="col-sm-2 offset-sm-1 d-none d-md-block">
       <img class="madlavning" src="https://placehold.co/120x160" class="" alt="">
     </div>
@@ -68,16 +72,24 @@
 </div>
 
 
+<!--Anden del 2 andre personer bag holdet-->
 <div class="container">
   <div class="row align-items-start my-5">
-    <div class="col-12 col-sm-5">
+    <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
+    <div class="col-12 col-sm-6 col-md-5 order-2 order-md-1">
+      <!--Tekst om 'bag' website hold-->
       <p>Bag skærmen sidder vores tekniske tryllekunstner og vores kreative stemme udadtil. Den ene får platformen til at køre som smurt, og den anden sørger for, at du føler dig hjemme, uanset om du læser en opskrift eller tilmelder dig e-magasinet. Vi er fire vidt forskellige mennesker, men vi deler drømmen om at skabe et madunivers med plads til både fællesskab, nærvær og rester på rugbrød.</p>
     </div>
-    <div class="col-12 col-sm-4 ">
+    <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
+    <div class="col-12 col-sm-6 col-md-4 order-1 order-md-2 ">
+      <!--Billede af Katrine og Marie-->
       <img class="teknik" src="https://placehold.co/120x160" alt="">
     </div>
   </div>
 </div>
+
+
+<!--Her kommer e-magasin-->
 
 
 
