--- a/efteraar.html
+++ b/efteraar.html
@@ -99,7 +99,7 @@
         </div>
 
         <div class="container text-center p-0">
-            <div class="row align-items-start">
+            <div class="row align-items-start my-5">
                 <div class="col-4">
                     <img src="https://placehold.co/100x100" alt="Græskar-Daal">
                 </div>
@@ -122,7 +122,46 @@
 
 
     <!--Footer-->
+    <footer class="py-4">
+        <div class="container d-flex flex-column align-items-center justify-content-center">
 
+            <!-- Servietbillede som baggrund -->
+            <div class="position-relative py-3 py-md-5">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
+                    <img src="https://placehold.co/300x300" alt="Serviet" class="img-fluid">
+                </picture>
+
+                <!-- Tekst ovenpå billedet -->
+                <div class="position-absolute top-50 start-50 translate-middle">
+                    <h3>Kontakt os:</h3>
+
+                    <div class="row justify-content-center">
+                        <div class="telefon col-12 col-md-6">
+                            <p>Telefon.nr.:</p>
+                            <p>+45 27 14 78 **</p>
+                        </div>
+
+                        <div class="mail col-12 col-md-6">
+                            <p>Mail:</p>
+                            <p>lille@skaal.dk</p>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3 justify-content-center">
+                        <div class="hjerte col-6 text-end">
+                            <p>&lt;3</p>
+                        </div>
+                        <div class="some col-6 text-end">
+                            <i class="bi bi-instagram me-2"></i>
+                            <i class="bi bi-tiktok"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
