--- a/foraar.html
+++ b/foraar.html
@@ -121,24 +121,11 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <footer class="py-3">
+    <footer class="py-4">
         <div class="container d-flex flex-column align-items-center justify-content-center">
 
             <!-- Servietbillede som baggrund -->
-            <div class="position-relative">
+            <div class="position-relative py-3 py-md-5">
                 <picture>
                     <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
                     <img src="https://placehold.co/300x300" alt="Serviet" class="img-fluid">
