--- a/sommer.html
+++ b/sommer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Skabelon</title>
+    <title>Sommer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
@@ -126,6 +126,47 @@
 
 
     <!-- Footer -->
+
+    <footer class="py-4">
+        <div class="container d-flex flex-column align-items-center justify-content-center">
+
+            <!-- Servietbillede som baggrund -->
+            <div class="position-relative py-3 py-md-5">
+                <picture>
+                    <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
+                    <img src="https://placehold.co/300x300" alt="Serviet" class="img-fluid">
+                </picture>
+
+                <!-- Tekst ovenpå billedet -->
+                <div class="position-absolute top-50 start-50 translate-middle">
+                    <h3>Kontakt os:</h3>
+
+                    <div class="row justify-content-center">
+                        <div class="telefon col-12 col-md-6">
+                            <p>Telefon.nr.:</p>
+                            <p>+45 27 14 78 **</p>
+                        </div>
+
+                        <div class="mail col-12 col-md-6">
+                            <p>Mail:</p>
+                            <p>lille@skaal.dk</p>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3 justify-content-center">
+                        <div class="hjerte col-6 text-end">
+                            <p>&lt;3</p>
+                        </div>
+                        <div class="some col-6 text-end">
+                            <i class="bi bi-instagram me-2"></i>
+                            <i class="bi bi-tiktok"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
 
 
