--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!--d-flex ....: centrerer tekst midt i billedet-->
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center text-center">
             <h1>Lille Skål</h1>
-            <a href="opskrifter.html">Opskrifter til små køkkener og store smage ></a>
+            <a href="alleopskrifter.html">Opskrifter til små køkkener og store smage ></a>
         </div>
 </div>
 
