--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -228,7 +228,7 @@
           </picture>
 
           <!-- Tekst ovenpå billedet -->
-          <div class="position-absolute top-50 start-50 translate-middle">
+          <div class="kontakt-boks position-absolute top-50 start-50 translate-middle">
               <h3>Kontakt os:</h3>
 
               <div class="row justify-content-center">
