farver og fonte

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             });
         })();
     </script>
+    <!--Google Fonts: Fuzzy Bubbles til H1,H2-->
+    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
+    <!--Google Fonts: Poppins til <p>-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+
   </head>
   
   <body>
@@ -24,7 +30,7 @@
     <!--LOGO TIL VENSTRE-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">LOGO</a>
+    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -98,15 +104,15 @@
 </div>
 
 <!--ÅRSTIDENS OPSKRIFTER-AFSNIT-->
-<div class="container">
-    <div class="my-5 mx-2">
+<div class="container-fluid orange mere-padding">
+    <div class="">
         <h2>Årstidens Opskrifter</h2>
 
         <!--Aktuel årstid-->
         <div id="current-season" class="season-banner">
         <!--JS tilføjer billede og tekst-->
         </div>
-
+        <br>
         <!--Andre årstider-->
         <h3>Udforsk andre årstider</h3>
         <div id="other-seasons" class="season-row" ></div>
