--- a/foraar.html
+++ b/foraar.html
@@ -9,6 +9,13 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+        <!--Google Fonts: Fuzzy Bubbles til H1,H2-->
+        <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
+        <!--Google Fonts: Poppins til <p>-->
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    
+
 </head>
 
 <body>
@@ -16,7 +23,7 @@
     <!--LOGO TIL VENSTRE-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">LOGO</a>
+            <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -94,7 +101,7 @@
 
 
     <!-- Smagen af forår - organge container -->
-    <div class="container orange">
+    <div class="container-fluid orange mere-padding">
         <div class="col-12 col-sm-6">
             <h2>Smagen af forår</h2>
             <p>Her finder du opskrifter med alt det bedste fra foråret – som asparges, spinat, radiser og nye kartofler.
