--- a/omos.html
+++ b/omos.html
@@ -65,7 +65,7 @@
   <div class="row align-items-start my-5">
     <div class="col-12 col-sm-6 col-md-4 ">
       <!--Billede af Amalie og Lærke-->
-      <img class="kokke" src="https://placehold.co/200x250" alt="">
+      <img class="kokke" src="img/omos/kokke.png" alt="">
     </div>
     <div class="col-12 col-sm-6 col-md-4">
       <!--Tekst om kokke-->
@@ -91,7 +91,7 @@
     <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
     <div class="col-12 col-sm-6 col-md-4 order-1 order-md-2 ">
       <!--Billede af Katrine og Marie-->
-      <img class="teknik" src="https://placehold.co/120x160" alt="">
+      <img class="teknik" src="img/omos/teknik.png" alt="">
     </div>
   </div>
 </div>
