--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -79,7 +79,7 @@
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="container introduktion">
-  <div class="row align-items-start my-5">
+  <div class="row align-items-start my-5 mx-4 mx-sm-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -94,27 +94,30 @@
 </div>
 
 <!--Forår opskrifter-->
-<div id="alle-foraar" class="container-fluid orange mere-padding d-none d-md-block">
-  <div class="row align-items-start my-5">
-    <h2>Forår</h2>
-    <div class="col">
-      <a href="foraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
-      <a href="foraar1.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="foraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
-      <a href="foraar2.html"><h3>Opskrift</h3></a>
-    </div>
+<div id="alle-foraar" class="container-fluid orange d-none d-md-block">
+  <div class="container py-5">
+    <div class="row align-items-start px-5">
+        <h2>Forår</h2>
+             <div class="col">
+            <a href="foraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+            <a href="foraar1.html"><h3>Opskrift</h3></a>
+            </div>
+        <div class="col">
+        <a href="foraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+        <a href="foraar2.html"><h3>Opskrift</h3></a>
+        </div>
     <div class="col">
       <a href="foraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
       <a href="foraar3.html"><h3>Opskrift</h3></a>
     </div>
+    </div>
+   
   </div>
 </div>
 
 <!--Sommer opskrifter-->
 <div id="alle-sommer" class="container d-none d-md-block">
-  <div class="row align-items-start my-5">
+  <div class="row align-items-start py-5 px-5">
     <h2>Sommer</h2>
     <div class="col">
       <a href="sommer1.html"><img src="https://placehold.co/80x100" alt=""></a>
@@ -133,26 +136,28 @@
 
 <!--Efterår opskrifter-->
 <div id="alle-efteraar" class="container-fluid orange mere-padding d-none d-md-block">
-  <div class="row align-items-start my-5">
-    <h2>Efterår</h2>
-    <div class="col">
-      <a href="efteraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
-      <a href="efteraar1.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="efteraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
-      <a href="efteraar2.html"><h3>Opskrift</h3></a>
-    </div>
-    <div class="col">
-      <a href="efteraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
-      <a href="efteraar3.html"><h3>Opskrift</h3></a>
-    </div>
+  <div class="container py-5">
+        <div class="row align-items-start px-5">
+            <h2>Efterår</h2>
+            <div class="col">
+                <a href="efteraar1.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar1.html"><h3>Opskrift</h3></a>
+            </div>
+            <div class="col">
+                <a href="efteraar2.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar2.html"><h3>Opskrift</h3></a>
+            </div>
+            <div class="col">
+                <a href="efteraar3.html"><img src="https://placehold.co/80x100" alt=""></a>
+                <a href="efteraar3.html"><h3>Opskrift</h3></a>
+            </div>
+        </div>
   </div>
 </div>
 
 <!--Vinter opskrifter-->
 <div id="alle-vinter" class="container d-none d-md-block">
-  <div class="row align-items-start my-5">
+  <div class="row align-items-start my-5 px-5">
     <h2>Vinter</h2>
     <div class="col">
       <a href="vinter1.html"><img src="https://placehold.co/80x100" alt=""></a>
@@ -174,9 +179,9 @@
 <!--Karussel til mobil-verison-->
 <!--Karussel Forår-->
 <div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
-<h2>Forår</h2>
-  <div class="carousel-inner">
 
+  <div class="carousel-inner py-5 px-5 orange">
+    <h2>Forår</h2>
     <a href="foraar1.html">
         <div class="carousel-item active text-center">
             <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
@@ -211,9 +216,9 @@
 
 <!--Karussel Sommer-->
 <div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
-<h2>Sommer</h2>
-  <div class="carousel-inner">
 
+  <div class="carousel-inner px-5">
+    <h2>Sommer</h2>
     <a href="sommer1.html">
         <div class="carousel-item active text-center">
             <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
@@ -248,9 +253,9 @@
 
 <!--Karussel Efterår-->
 <div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
-<h2>Efterår</h2>
-  <div class="carousel-inner">
 
+  <div class="carousel-inner orange py-5 px-5">
+    <h2>Efterår</h2>
     <a href="efteraar1.html">
         <div class="carousel-item active text-center">
             <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
@@ -285,9 +290,9 @@
 
 <!--Karussel Vinter-->
 <div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
-<h2>Vinter</h2>
-  <div class="carousel-inner">
 
+  <div class="carousel-inner px-5">
+    <h2>Vinter</h2>
     <a href="vinter1.html">
         <div class="carousel-item active text-center">
             <img src="https://placehold.co/100x80" class="d-block w-100" alt="...">
