--- a/foraar1.html
+++ b/foraar1.html
@@ -91,7 +91,7 @@
   </div>
 </div>
 
-<section class="orange py-5">
+<section class="container-fluid orange mere-padding">
     <!--Info-linje om tid og antal per.-->
 <section class="text-center">
     <h2>Opskrift</h2>
@@ -158,7 +158,7 @@
 </section>
 
 <!--Musik-->
-<section class="my-5 playlist-section">
+<section class="container my-5 playlist-section">
     <h3>Gør det hyggeligt!</h3>
     <p>Hæld et glas hvidvin op og nyd vores playliste, mens du hygger dig med madlavningen</p>
 
@@ -172,10 +172,10 @@
 
 
 <!--Andre opskrifter-->
-<section class="my-5">
+<section class="container my-5">
     <h3>Hvad skal du lave i morgen?</h3>
 
-    <div class="d-flex justify-content-center gap-5">
+    <div class="d-flex">
         <a href="foraar2.html" class="col-12 col-sm-5"><img src="https://placehold.co/60x40" alt=""></a>
         <a href="foraar3html." class="col-12 col-sm-5"><img src="https://placehold.co/60x40" alt=""></a>
     </div>
@@ -184,12 +184,12 @@
 
 
 <!--Kommentarspor-->
-<section>
-    <h3>Har du spørgsmål til oprksiften?</h3>
+<section class="container">
+    <h3>Har du spørgsmål til opskriften?</h3>
     <p>Har du et spørgsmål til opskriften eller lyst til at sende en hilsen med et tip, så kan du skrive til os i kommentarfeltet herunder.</p>
 </section>
 
-    <div class="comment-container">
+    <div class="container comment-container">
         <div class="comment-form">
             <input type="text" id="name" placeholder="Dit navn" />
             <textarea id="comment" placeholder="Din kommentar"></textarea>
