--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <!--INTRODUKTIONS-AFSNIT-->
 <div class="container">
-  <div class="row align-items-start my-5">
+  <div class="row align-items-start my-5 mx-sm-5">
     <!--Tekstfelt m. introduktion til side-->
     <!--Tekst skal fylde 12 kol. på mobil og op efter 8 kol. -->
     <div class="col-12 col-sm-6">
@@ -104,18 +104,20 @@
 </div>
 
 <!--ÅRSTIDENS OPSKRIFTER-AFSNIT-->
-<div class="container-fluid orange mere-padding">
-    <div class="">
-        <h2>Årstidens Opskrifter</h2>
+<div class="container-fluid orange">
+    <div class="container py-5">
+        <div class="mx-sm-5">
+          <h2>Årstidens Opskrifter</h2>
 
-        <!--Aktuel årstid-->
-        <div id="current-season" class="season-banner">
-        <!--JS tilføjer billede og tekst-->
+          <!--Aktuel årstid-->
+          <!--JS tilføjer billede og tekst-->
+          <div id="current-season" class="season-banner">
+          </div>
+          <br>
+          <!--Andre årstider-->
+          <h3>Udforsk andre årstider</h3>
+          <div id="other-seasons" class="season-row" ></div>
         </div>
-        <br>
-        <!--Andre årstider-->
-        <h3>Udforsk andre årstider</h3>
-        <div id="other-seasons" class="season-row" ></div>
     </div>
 </div>
 
@@ -158,48 +160,6 @@
 </section>
 
 
-
-<!--Footer-->
-<footer class="py-4">
-    <div class="container d-flex flex-column align-items-center justify-content-center">
-
-        <!-- Servietbillede som baggrund -->
-        <div class="position-relative py-3 py-md-5">
-            <picture>
-                <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
-                <img src="https://placehold.co/300x300" alt="Serviet" class="img-fluid">
-            </picture>
-
-            <!-- Tekst ovenpå billedet -->
-            <div class="kontakt-boks position-absolute top-50 start-50 translate-middle">
-                <h3>Kontakt os:</h3>
-
-                <div class="row justify-content-center">
-                    <div class="telefon col-12 col-md-6">
-                        <p>Telefon.nr.:</p>
-                        <p>+45 27 14 78 **</p>
-                    </div>
-
-                    <div class="mail col-12 col-md-6">
-                        <p>Mail:</p>
-                        <p>lille@skaal.dk</p>
-                    </div>
-                </div>
-
-                <div class="row mt-3 justify-content-center">
-                    <div class="hjerte col-6 text-end">
-                        <p>&lt;3</p>
-                    </div>
-                    <div class="some col-6 text-end">
-                        <i class="bi bi-instagram me-2"></i>
-                        <i class="bi bi-tiktok"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
     </script>
