--- a/omos.html
+++ b/omos.html
@@ -56,36 +56,34 @@
   </div>
 </nav>
 
-<div class="container my-5">
+<div class="container my-5 px-5">
   <h1>Om Os</h1>
 </div>
 
 <!--Første del m. 2 fra holdet-->
 <div class="container">
-  <div class="row align-items-start my-5">
-    <div class="col-12 col-sm-6 col-md-4 ">
+  <div class="row align-items-start my-5 mx-sm-5">
+    <div class="col-12 col-sm-6 col-md-4 offset-sm-1">
       <!--Billede af Amalie og Lærke-->
       <img class="kokke" src="img/omos/kokke.png" alt="">
     </div>
-    <div class="col-12 col-sm-6 col-md-4">
+    <div class="col-12 col-sm-6 my-4">
       <!--Tekst om kokke-->
-              I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.
-      </p>
-    </div>
-    <!--Billede, som kun vises fra tablet og op-->
-    <div class="col-sm-2 offset-sm-1 d-none d-md-block">
-      <img class="madlavning" src="https://placehold.co/120x160" class="" alt="">
+      <h2>De to kokke</h2>
+      <p>I køkkenet finder du vores to kokke, der elsker at nørde smag, skrælle kartofler i godt selskab og trylle med sæsonens råvarer. De står bag de opskrifter, du finder her på siden – enkle, ærlige og fulde af kærlighed til hjemmelavet mad. For dem handler det ikke om det perfekte billede, men om duften, smagen og glæden ved at lave noget fra bunden.</p>
+      <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" class="" alt="">
     </div>
   </div>
 </div>
 
 
-<!--Anden del 2 andre personer bag holdet-->
+<!--Anden del - 2 andre personer bag holdet-->
 <div class="container">
-  <div class="row align-items-start my-5">
+  <div class="row align-items-start my-5 mx-sm-5">
     <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
-    <div class="col-12 col-sm-6 col-md-5 order-2 order-md-1">
+    <div class="col-12 col-sm-6 offset-sm-1 order-2 order-md-1 my-4">
       <!--Tekst om 'bag' website hold-->
+      <h2>Overskrift</h2>
       <p>Bag skærmen sidder vores tekniske tryllekunstner og vores kreative stemme udadtil. Den ene får platformen til at køre som smurt, og den anden sørger for, at du føler dig hjemme, uanset om du læser en opskrift eller tilmelder dig e-magasinet. Vi er fire vidt forskellige mennesker, men vi deler drømmen om at skabe et madunivers med plads til både fællesskab, nærvær og rester på rugbrød.</p>
     </div>
     <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
@@ -97,7 +95,16 @@
 </div>
 
 
-<!--Her kommer e-magasin-->
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col-6 col-sm-4 offset-sm-3">
+      <img src="img/omos/paastranden.png" alt="">
+    </div>
+    <div class="col-6 col-sm-4">
+      <img src="img/omos/hugooglaerke.png" alt="">
+    </div>
+  </div>
+</div>
 
 
 
