--- a/skabelon.html
+++ b/skabelon.html
@@ -100,8 +100,8 @@
       <!-- Servietbillede som baggrund -->
       <div class="position-relative py-5 py-md-5">
           <picture>
-              <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
-              <img src="https://placehold.co/300x300" alt="Serviet" >
+              <source media="(min-width: 768px)" srcset="img/storserviet.png">
+              <img src="img/lilleserviet.png" alt="Serviet" >
           </picture>
 
           <!-- Tekst ovenpå billedet -->
