--- a/kontakt.html
+++ b/kontakt.html
@@ -69,16 +69,16 @@
             <img src="img/lilleserviet.png" alt="Serviet">
   
             <!-- Tekst ovenpå billedet -->
-            <div class="position-absolute top-50 start-50 translate-middle">
+            <div class="kontakt-tekst position-absolute top-50 start-50 translate-middle">
               <h2>Kontakt os:</h2>
   
               <div class="row">
-                <div class="telefon col-12 col-md-6">
+                <div class="telefon col-12 col-lg-6">
                   <p class="mb-1">Telefon.nr.:</p>
                   <p>+45 27 14 78 **</p>
                 </div>
   
-                <div class="mail col-12 col-md-6">
+                <div class="mail col-12 col-lg-6">
                   <p class="mb-1">Mail:</p>
                   <p>lille@skaal.dk</p>
                 </div>
