--- a/alleopskrifter.html
+++ b/alleopskrifter.html
@@ -178,7 +178,7 @@
 
 <!--Karussel til mobil-verison-->
 <!--Karussel Forår-->
-<div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
+<div id="carouselExampleControlsNoTouching carousel-foraar" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
 
   <div class="carousel-inner py-5 px-5 orange">
     <h2>Forår</h2>
@@ -215,7 +215,7 @@
 </div>
 
 <!--Karussel Sommer-->
-<div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
+<div id="carouselExampleControlsNoTouching carousel-sommer" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
 
   <div class="carousel-inner px-5">
     <h2>Sommer</h2>
@@ -252,7 +252,7 @@
 </div>
 
 <!--Karussel Efterår-->
-<div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
+<div id="carouselExampleControlsNoTouching carousel-efteraar" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
 
   <div class="carousel-inner orange py-5 px-5">
     <h2>Efterår</h2>
@@ -289,7 +289,7 @@
 </div>
 
 <!--Karussel Vinter-->
-<div id="carouselExampleControlsNoTouching" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
+<div id="carouselExampleControlsNoTouching carousel-vinter" class="carousel slide d-block d-md-none my-5" data-bs-touch="false">
 
   <div class="carousel-inner px-5">
     <h2>Vinter</h2>
@@ -324,6 +324,10 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+
+
+
 
 
 
