--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul class="navbar-nav">
         <!--DROPDOWN M. SÆSONER-->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link" href="alleopskrifter.html" role="button">
             Opskrifter
           </a>
           <ul class="dropdown-menu">
@@ -74,9 +74,6 @@
       <source media="(min-width: 768px)" srcset="https://placehold.co/1240x400">
       <img src="https://placehold.co/100x100" alt="">
     </picture>
-
-
-
         <!--TEKST/LOGO OVER BAGGRUNDSBILLEDE-->
         <!--position-absolute top-0 start 0: placer indholdet i øverste venstre hjørne-->
         <!--w-100 h-100: gør overlay lige så stort som billedet-->
@@ -154,8 +151,8 @@
 
 
 <!--FÆLLESSKAB-AFSNIT-->
-<section class="bord-container d-flex position-relative align-items-center justify-content-center">
-    <a href="faellesskaal.html"><img src="https://placehold.co/500x200" alt=""></a>
+<section class="container-fluid orange position-relative faelles-bord">
+    <a href="faellesskaal.html"><img src="img/bord-pil.png" alt=""></a>
     <a class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center" href="faellesskaal.html">Bliv en del af fælles-skålen</a>
 </section>
 
@@ -163,7 +160,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
     </script>
-
     <script src="script.js"></script>
+
   </body>
 </html>
