--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
 <!--FÆLLESSKAB-AFSNIT-->
 <section class="container-fluid orange position-relative faelles-bord">
-    <a href="faellesskaal.html"><img src="img/bord-pil.png" alt=""></a>
-    <a class="position-absolute top-0 start-0 w-100 h-100 d-flex flex-column justify-content-center       align-items-center" href="faellesskaal.html">Bliv en del af fælles-skålen</a>
+    <a href="faellesskaal.html" class="d-flex justify-content-center"><img src="img/bord-pil.png" alt=""></a>
+    <a class="position-absolute d-flex flex-column" href="faellesskaal.html">Bliv en del af fælles-skålen</a>
 </section>
 
 
