--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
 
 <!--FÆLLESSKAB-AFSNIT-->
 <section class="container-fluid orange position-relative faelles-bord">
-    <a href="faellesskaal.html" class="d-flex justify-content-center"><img src="img/bord-pil.png" alt=""></a>
+      <picture class="d-flex justify-content-center">
+        <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
+        <img src="img/mobilfaellesskaal.png" alt="">
+    </picture>
 </section>
 
 
