--- a/faellesskaal.html
+++ b/faellesskaal.html
@@ -240,10 +240,10 @@
   <div class="container d-flex flex-column align-items-center justify-content-center">
 
       <!-- Servietbillede som baggrund -->
-      <div class="position-relative py-3 py-md-5">
+      <div class="position-relative py-5 py-md-5">
           <picture>
-              <source media="(min-width: 768px)" srcset="https://placehold.co/600x200">
-              <img src="https://placehold.co/300x300" alt="Serviet" class="img-fluid">
+              <source media="(min-width: 768px)" srcset="img/storserviet.png">
+              <img src="img/lilleserviet.png" alt="Serviet" >
           </picture>
 
           <!-- Tekst ovenpå billedet -->
@@ -253,12 +253,12 @@
               <div class="row justify-content-center">
                   <div class="telefon col-12 col-md-6">
                       <p>Telefon.nr.:</p>
-                      <p>+45 27 14 78 **</p>
+                      <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
                   </div>
 
                   <div class="mail col-12 col-md-6">
                       <p>Mail:</p>
-                      <p>lille@skaal.dk</p>
+                      <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
                   </div>
               </div>
 
