--- a/kontakt.html
+++ b/kontakt.html
@@ -75,12 +75,12 @@
               <div class="row">
                 <div class="telefon col-12 col-lg-6">
                   <p class="mb-1">Telefon.nr.:</p>
-                  <p>+45 27 14 78 **</p>
+                  <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
                 </div>
   
                 <div class="mail col-12 col-lg-6">
                   <p class="mb-1">Mail:</p>
-                  <p>lille@skaal.dk</p>
+                  <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
                 </div>
               </div>
   
@@ -110,7 +110,7 @@
 <!--logo-kontakt-->
 <div class="py-5">
     <div class="logo-hero d-flex justify-content-center">
-        <img src="img/logo.png" alt="">
+        <img src="img/logo.png" alt="logo">
     </div>
     <div class=" text-center">
         <h1>Lille skål</h1>
