--- a/skabelon.html
+++ b/skabelon.html
@@ -111,12 +111,12 @@
               <div class="row justify-content-center">
                   <div class="telefon col-12 col-md-6">
                       <p>Telefon.nr.:</p>
-                      <p>+45 27 14 78 **</p>
+                      <a href="tel:+45 27 14 78">+45 27 14 78 **</a>
                   </div>
 
                   <div class="mail col-12 col-md-6">
                       <p>Mail:</p>
-                      <p>lille@skaal.dk</p>
+                      <a href="mailto:lille@skaal.dk">lille@skaal.dk</a>
                   </div>
               </div>
 
