--- a/index.html
+++ b/index.html
@@ -152,10 +152,12 @@
 
 <!--FÆLLESSKAB-AFSNIT-->
 <section class="container-fluid orange position-relative faelles-bord">
-      <picture class="d-flex justify-content-center">
+  <a href="faellesskaal.html">
+        <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
         <img src="img/mobilfaellesskaal.png" alt="">
     </picture>
+  </a>
 </section>
 
 
