--- a/omos.html
+++ b/omos.html
@@ -106,6 +106,16 @@
   </div>
 </div>
 
+<!--FÆLLESSKAB-AFSNIT-->
+<section class="container-fluid orange position-relative faelles-bord">
+  <a href="faellesskaal.html">
+        <picture class="d-flex justify-content-center">
+        <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
+        <img src="img/mobilfaellesskaal.png" alt="">
+    </picture>
+  </a>
+</section>
+
 
 
 
