--- a/kontakt.html
+++ b/kontakt.html
@@ -85,12 +85,12 @@
               </div>
   
               <div class="row mt-2">
-                <div class="col-6 text-end">
+                <div class="hjerte col-6 text-end">
                   <p>&lt;3</p>
                 </div>
                 <div class="col-6 text-end">
-                  <i class="bi bi-instagram me-2"></i>
-                  <i class="bi bi-tiktok"></i>
+                  <i class="bi bi-instagram fs-1"></i>
+                  <i class="bi bi-tiktok fs-1"></i>
                 </div>
               </div>
             </div>
