--- a/kontakt.html
+++ b/kontakt.html
@@ -58,7 +58,7 @@
 
 
 <!-- Kontakt-boks -->
-  <div class="container-kontakt">
+  <div class="container-kontakt my-5">
     <div class="container">
       <div class="row justify-content-center align-items-center">
   
@@ -89,8 +89,8 @@
                   <p>&lt;3</p>
                 </div>
                 <div class="col-6 text-end">
-                  <i class="bi bi-instagram fs-1"></i>
-                  <i class="bi bi-tiktok fs-1"></i>
+                  <i class="bi bi-instagram fs-3"></i>
+                  <i class="bi bi-tiktok fs-3"></i>
                 </div>
               </div>
             </div>
