--- a/kontakt.html
+++ b/kontakt.html
@@ -89,8 +89,9 @@
                   <p>&lt;3</p>
                 </div>
                 <div class="col-6 text-end">
-                  <i class="bi bi-instagram fs-3"></i>
-                  <i class="bi bi-tiktok fs-3"></i>
+                  <a href=""><i class="bi bi-instagram fs-3"></i></a>
+                  <a href=""><i class="bi bi-tiktok fs-3"></i></a>
+                  
                 </div>
               </div>
             </div>
