--- a/kontakt.html
+++ b/kontakt.html
@@ -58,7 +58,7 @@
 
 
 <!-- Kontakt-boks -->
-  <div class="container-kontakt my-5">
+  <div class="container-kontakt">
     <div class="container">
       <div class="row justify-content-center align-items-center">
   
