--- a/kontakt.html
+++ b/kontakt.html
@@ -89,7 +89,7 @@
                   <p>&lt;3</p>
                 </div>
                 <div class="col-6 text-end">
-                  <a href=""><i class="bi bi-instagram fs-3"></i></a>
+                  <a href=""><i class="bi bi-instagram m-2 fs-3"></i></a>
                   <a href=""><i class="bi bi-tiktok fs-3"></i></a>
                   
                 </div>
