--- a/omos.html
+++ b/omos.html
@@ -151,7 +151,7 @@
                       <p>&lt;3</p>
                   </div>
                   <div class="some col-6 text-end">
-                      <i class="bi bi-instagram me-2"></i>
+                      <i class="bi bi-instagram m-2"></i>
                       <i class="bi bi-tiktok"></i>
                   </div>
               </div>
